releases/1.14.0/upgrade.md
# Upgrade notes from 1.13 -> 1.14.0

Release Notes: [1.14.0](../release-notes.md)


## Updated Docker images

Here are list of docker images that have been updated:

```shell
iomete/iom-app:1.14.0
iomete/iom-catalog:1.14.0
iomete/iom-core:1.14.0
iomete/iom-data-plane-init:1.14.0
iomete/iom-identity:1.14.0
iomete/iom-sql:1.14.0
# New image
iomete/iom-connect-rest-client:1.0.0
```

## Update Helm Repository

```shell
helm repo add iomete https://chartmuseum.iomete.com
helm repo update
```

## Upgrade IOMETE Data Plane

Ensure your `data-plane-values.yaml` file is correctly configured before deploying the IOMETE Data Plane:

```shell
# helm repo update iomete
helm upgrade --install -n iomete-system data-plane \
  iomete/iomete-data-plane-enterprise \
  -f example-data-plane-values.yaml --version 1.14
```

Notes:
- Manually restart `iom-identity` service after deployment completed.

